--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -1,12 +1,11 @@
 .btn {
-    border: none;
+    border: 4px outset #eee;
     cursor: pointer;
     font: inherit;
-    padding: 1rem;
+    padding: 0.5rem;
     margin: 0;
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
-    border-radius: 0.5rem;
+    background-color: #ccc;
+    color: black;
     box-shadow: 0 1px 0.5rem 0 rgba(0, 0, 102, 0.5);
     transition: transform 100ms ease;
 }
