--- a/css/pages/leaderboard.css
+++ b/css/pages/leaderboard.css
@@ -47,23 +47,21 @@
     width: 100%;
 }
 .page-leaderboard .board .user button {
-    background-color: var(--color-background);
-    color: var(--color-on-background);
+    background-color: transparent;
     border: none;
     border-radius: 0.5rem;
-    padding: 1rem;
+    padding: 1rem 0;
     text-align: start;
     word-break: normal;
     overflow-wrap: anywhere;
 }
 .page-leaderboard .board .user button:hover {
-    background-color: var(--color-background-hover);
-    color: var(--color-on-background-hover);
+    background-color: #eee;
+    color: black !important;
     cursor: pointer;
 }
 .page-leaderboard .board .user.active button {
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
+    color: orange;
 }
 .page-leaderboard .player {
     display: flex;
