--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -1,10 +1,3 @@
-:root {
-    --color-background: white;
-    --color-on-background: black;
-    --color-primary: #0066ff;
-    --color-on-primary: white;
-}
-
 .nav {
     display: flex;
     column-gap: 2rem;
@@ -18,10 +11,10 @@
     transition: border-color 100ms ease;
 }
 .nav .nav__tab.router-link-active {
-    border-color: var(--color-on-primary);
+    color: orange;
 }
 .nav .nav__tab:hover {
-    border-color: var(--color-on-primary);
+    color: orange;
 }
 .nav .nav__actions {
     flex: 1;
@@ -49,10 +42,10 @@
 }
 .nav .nav__actions .nav__cta {
     margin-left: 1rem;
-    padding: 1rem;
-    background-color: var(--color-on-primary);
-    color: var(--color-primary);
-    border-radius: 0.5rem;
+    padding: 0.5rem;
+    background-color: #ccc;
+    color: black;
+    border: 4px outset #eee;
     box-shadow: 0 1px 0.5rem 0 rgba(0, 0, 102, 0.5);
     transition: transform 100ms ease;
 }
