--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
 :root {
-    --color-background: white;
-    --color-on-background: black;
-    --color-background-hover: #eee;
-    --color-on-background-hover: black;
-    --color-primary: #0066ff;
+    --color-background: rgba(0, 0, 0, 0.6);
+    --color-on-background: white;
+    --color-background-hover: #27262c;
+    --color-on-background-hover: white;
+    --color-primary: #283593;
+    --color-primary-disabled: #1f213c;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
 
-main.dark,
+/* main.dark,
 header.dark {
     color-scheme: dark;
     --color-background: #1c1b1f;
@@ -21,7 +22,7 @@ header.dark {
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
-}
+} */
 
 html,
 body {
@@ -32,6 +33,16 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    padding: 1.5rem;
+    background-image: url("/assets/april-background.jpg");
+    background-size: cover;
+}
+
+.surface {
+    padding: 1.5rem;
+    background-color: var(--color-background);
+    color: white;
+    border: 2px solid white;
 }
 
 header,
@@ -46,12 +57,12 @@ main {
     column-gap: 2rem;
 }
 
-header {
+header.surface {
+    padding: 0;
     display: flex;
     padding-inline: calc(25vw - 10rem);
     height: 4rem;
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
+    margin-bottom: 1.5rem;
 }
 @media screen and (min-width: 1366px) {
     header {
@@ -66,6 +77,9 @@ header .logo {
     align-items: flex-end;
     gap: 1rem;
 }
+header .logo img {
+    height: 3.5rem;
+}
 header .nav {
     flex: 1;
 }
@@ -75,7 +89,7 @@ main {
     flex: 1;
     display: grid;
     grid-template-rows: minmax(0, 1fr);
-    column-gap: 2rem;
+    column-gap: 1.5rem;
 }
 main > div {
     overflow-y: auto;
