--- a/css/typography.css
+++ b/css/typography.css
@@ -1,11 +1,10 @@
 h1,
 .type-h1,
 .type-headline-lg {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Times New Roman", serif;
     font-size: 51.4285714286px;
     line-height: 52px;
     font-weight: 700;
-    letter-spacing: -2px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 h1::before,
@@ -26,11 +25,10 @@ h1::after,
 h2,
 .type-h2,
 .type-headline-md {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Times New Roman", serif;
     font-size: 34.2857142857px;
     line-height: 40px;
     font-weight: 700;
-    letter-spacing: -1px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 h2::before,
@@ -51,7 +49,7 @@ h2::after,
 h3,
 .type-h3,
 .type-headline-sm {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 22.8571428571px;
     line-height: 28px;
     font-weight: 700;
@@ -75,7 +73,7 @@ h3::after,
 h4,
 .type-h4,
 .type-title-lg {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 22.8571428571px;
     line-height: 28px;
     font-weight: 700;
@@ -100,7 +98,7 @@ h4::after,
 h5,
 .type-h5,
 .type-title-md {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 20px;
     line-height: 26px;
     font-weight: 700;
@@ -126,7 +124,7 @@ h6,
 dt,
 .type-h6,
 .type-title-sm {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 17.1428571429px;
     line-height: 24px;
     font-weight: 700;
@@ -154,10 +152,10 @@ label,
 input[type="text"],
 input[type="number"],
 .type-label-lg {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Comic Sans MS", "Comic Sans", sans-serif;
     font-size: 17.1428571429px;
     line-height: 20px;
-    font-weight: 500;
+    font-weight: bold;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 .type-label-lg::before {
@@ -172,7 +170,7 @@ input[type="number"],
 }
 
 .type-label-md {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 14.2857142857px;
     line-height: 18px;
     font-weight: 500;
@@ -190,7 +188,7 @@ input[type="number"],
 }
 
 .type-label-sm {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 11.4285714286px;
     line-height: 12px;
     font-weight: 500;
@@ -209,7 +207,7 @@ input[type="number"],
 
 p,
 .type-body {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-size: 17.1428571429px;
     line-height: 28px;
     font-weight: 500;
