Moved april fools style to secret button ;)

--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -1,11 +1,12 @@
 .btn {
-    border: 4px outset #eee;
+border: none;
     cursor: pointer;
     font: inherit;
-    padding: 0.5rem;
+    padding: 1rem;
     margin: 0;
-    background-color: #ccc;
-    color: black;
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    border-radius: 0.5rem;
     box-shadow: 0 1px 0.5rem 0 rgba(0, 0, 102, 0.5);
     transition: transform 100ms ease;
 }
@@ -17,4 +18,12 @@
 
 .btn:not(:disabled):hover:not(:active) {
     transform: translateY(-2px);
+}
+
+.shitty .btn {
+    border: 4px outset #eee;
+    padding: 0.5rem;
+    background-color: #ccc;
+    border-radius: 0;
+    color: black;
 }
