--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -1,4 +1,9 @@
 .nav {
+    --color-background: white;
+    --color-on-background: black;
+    --color-primary: #0066ff;
+    --color-on-primary: white;
+
     display: flex;
     column-gap: 2rem;
 }
@@ -11,10 +16,10 @@
     transition: border-color 100ms ease;
 }
 .nav .nav__tab.router-link-active {
-    color: orange;
+    border-color: var(--color-on-primary);
 }
 .nav .nav__tab:hover {
-    color: orange;
+    border-color: var(--color-on-primary);
 }
 .nav .nav__actions {
     flex: 1;
@@ -42,13 +47,33 @@
 }
 .nav .nav__actions .nav__cta {
     margin-left: 1rem;
-    padding: 0.5rem;
-    background-color: #ccc;
-    color: black;
-    border: 4px outset #eee;
+    padding: 1rem;
+    background-color: var(--color-on-primary);
+    color: var(--color-primary);
+    border-radius: 0.5rem;
     box-shadow: 0 1px 0.5rem 0 rgba(0, 0, 102, 0.5);
     transition: transform 100ms ease;
 }
 .nav .nav__actions .nav__cta:hover:not(:active) {
     transform: translateY(-2px);
+}
+
+/* Shitty */
+
+.shity .nav .nav__tab.router-link-active {
+    border-color: transparent;
+    color: orange;
+}
+
+.shitty .nav .nav__tab:hover {
+    border-color: transparent;
+    color: orange;
+}
+
+.shitty .nav .nav__actions .nav__cta {
+    padding: 0.5rem;
+    background-color: #ccc;
+    color: black;
+    border-radius: 0;
+    border: 4px outset #eee;
 }
