--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,16 @@
 :root {
-    --color-background: rgba(0, 0, 0, 0.6);
-    --color-on-background: white;
-    --color-background-hover: #27262c;
-    --color-on-background-hover: white;
-    --color-primary: #283593;
-    --color-primary-disabled: #1f213c;
+    --color-background: white;
+    --color-on-background: black;
+    --color-background-hover: #eee;
+    --color-on-background-hover: black;
+    --color-primary: #0066ff;
+    --color-primary-disabled: #283593;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
 
-/* main.dark,
-header.dark {
+.dark.root {
     color-scheme: dark;
     --color-background: #1c1b1f;
     --color-on-background: white;
@@ -22,33 +21,41 @@ header.dark {
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
-} */
+}
+
+.shitty.root {
+    --color-background: rgba(0, 0, 0, 0.7);
+    --color-on-background: white;
+    --color-background-hover: #27262c;
+    --color-on-background-hover: white;
+    --color-primary: #283593;
+    --color-primary-disabled: #1f213c;
+    --color-on-primary: white;
+    --color-error: #de0000;
+    --color-on-error: white;
+}
 
 html,
-body {
+body,
+.root {
     height: 100%;
 }
 
-body {
+.root {
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 1.5rem;
-    background-image: url("/assets/april-background.jpg");
-    background-size: cover;
+    background-color: var(--color-background);
+    color: var(--color-on-background);
 }
 
 .surface {
-    padding: 1.5rem;
     background-color: var(--color-background);
-    color: white;
-    border: 2px solid white;
+    color: var(--color-on-background);
 }
 
 header,
 main {
-    background-color: var(--color-background);
-    color: var(--color-on-background);
     display: grid;
     grid-template-columns: minmax(16rem, 1fr) minmax(16rem, 2fr) minmax(
             16em,
@@ -62,7 +69,8 @@ header.surface {
     display: flex;
     padding-inline: calc(25vw - 10rem);
     height: 4rem;
-    margin-bottom: 1.5rem;
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
 }
 @media screen and (min-width: 1366px) {
     header {
@@ -89,7 +97,7 @@ main {
     flex: 1;
     display: grid;
     grid-template-rows: minmax(0, 1fr);
-    column-gap: 1.5rem;
+    column-gap: 2rem;
 }
 main > div {
     overflow-y: auto;
@@ -107,4 +115,32 @@ input[type="checkbox"] {
     width: 1.25rem;
     cursor: pointer;
     margin: 0;
+}
+
+/* Shitty */
+
+.shitty .surface {
+    padding: 1.5rem;
+    border: 2px solid var(--color-on-background);;
+}
+
+.shitty header.surface {
+    padding: 0 calc(25vw - 10rem);
+    margin-bottom: 1.5rem;
+    background-color: var(--color-background);
+    color: var(--color-on-background);
+}
+
+.shitty.root {
+    padding: 1.5rem;
+    background-image: url("/assets/april-background.jpg");
+    background-size: cover;
+}
+
+.shitty main {
+    column-gap: 1.5rem;
+}
+
+.toggle-shitty:not(:hover) img {
+    display: none;
 }
