--- a/css/pages/leaderboard.css
+++ b/css/pages/leaderboard.css
@@ -47,21 +47,23 @@
     width: 100%;
 }
 .page-leaderboard .board .user button {
-    background-color: transparent;
+    background-color: var(--color-background);
+    color: var(--color-on-background);
     border: none;
     border-radius: 0.5rem;
-    padding: 1rem 0;
+    padding: 1rem;
     text-align: start;
     word-break: normal;
     overflow-wrap: anywhere;
 }
 .page-leaderboard .board .user button:hover {
-    background-color: #eee;
-    color: black !important;
+    background-color: var(--color-background-hover);
+    color: var(--color-on-background-hover);
     cursor: pointer;
 }
 .page-leaderboard .board .user.active button {
-    color: orange;
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
 }
 .page-leaderboard .player {
     display: flex;
@@ -88,4 +90,22 @@
 }
 .page-leaderboard .player .table a:hover {
     text-decoration: underline;
+}
+
+/* Shitty */
+
+.shitty .page-leaderboard .board .user button {
+    background-color: transparent;
+    padding: 1rem 0;
+}
+
+
+.shitty .page-leaderboard .board .user button:hover {
+    background-color: #eee;
+    color: black !important;
+}
+
+.shitty .page-leaderboard .board .user.active button {
+    background-color: transparent;
+    color: orange;
 }
