--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #0066ff;
-    --color-primary-disabled: #283593;
+    --color-primary: #6a329f;
+    --color-primary-disabled: #20124d;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
@@ -16,8 +16,8 @@
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #283593;
-    --color-primary-disabled: #1f213c;
+    --color-primary: #20124d;
+    --color-primary-disabled: #20124d;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
@@ -28,7 +28,7 @@
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #283593;
+    --color-primary: #20124d;
     --color-primary-disabled: #1f213c;
     --color-on-primary: white;
     --color-error: #de0000;
